@@ -1,0 +1,24 @@
+# _____     ___ ____     ___ ____
+#  ____|   |    ____|   |        | |____|
+# |     ___|   |____ ___|    ____| |    \    PS2DEV Open Source Project.
+#-----------------------------------------------------------------------
+# Copyright 2001-2005, ps2dev - http://www.ps2dev.org
+# Licenced under Academic Free License version 2.0
+# Review ps2sdk README & LICENSE files for further details.
+#
+# $Id: Makefile.sample 577 2004-09-14 14:41:46Z pixel $
+
+EE_BIN = prof.elf
+EE_OBJS = prof.o
+EE_CFLAGS = -pg
+EE_LDFLAGS = -pg
+EE_LIBS = -lc
+
+all: $(EE_BIN)
+
+clean:
+	rm -f *.elf *.o *.a
+
+include $(PS2SDK)/samples/Makefile.pref
+include $(PS2SDK)/samples/Makefile.eeglobal
+
